# openfx

./: CMakeLists.txt  ofx.cmake
.github/workflows/: ccpp.yml
Examples/: CMakeLists.txt
HostSupport/: CMakeLists.txt
HostSupport/BoostHost/: main.cpp
HostSupport/examples/: hostDemo.cpp
HostSupport/include/: ofxhBinary.h  ofxhClip.h  ofxhImageEffect.h  ofxhImageEffectAPI.h  ofxhInteract.h  ofxhParam.h  ofxhPropertySuite.h
HostSupport/src/: ofxhBinary.cpp  ofxhClip.cpp  ofxhImageEffect.cpp  ofxhImageEffectAPI.cpp  ofxhInteract.cpp  ofxhParam.cpp  ofxhPluginCache.cpp  ofxhPropertySuite.cpp
Support/: CMakeLists.txt  ofx.cmake
Support/Plugins/Basic/: basic.cpp
Support/Plugins/Field/: field.cpp
Support/Plugins/Generator/: noise.cpp
Support/Plugins/Invert/: invert.cpp
Support/Plugins/MultiBundle/: multibundle1.cpp  multibundle2.cpp
Support/Plugins/Retimer/: retimer.cpp
Support/Plugins/Tester/: Tester.cpp
Support/Plugins/Transition/: crossFade.cpp
Support/include/: ofxsCore.h  ofxsImageEffect.h  ofxsMemory.h  ofxsParam.h
include/: ofxCore.h
